fix alignment of images on Landing page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* header nav  */
 .navbar-brand {
     font-family: Georgia;
@@ -10,14 +11,6 @@
 .nav-item {
     font-family: Georgia;
 }
-/* .navbar-brand{
-	font-family: "Georgia", serif;
-	font-weight: 800;
-	font-size: 20px;
-    margin-left: auto;
-    background-color: lightseagreen
-    
-} */
 
 .display-4 {
     font-family: Georgia;
@@ -40,7 +33,8 @@ p {
 
 .under-header {
     font-family: Georgia;
-    font-size: 15px
+    font-size: 15
+    px
 }
 
 .card-title {
